2.0.3

- migration to AndroidX
- added black theme to intro
- overall fixes to dark/black theme
- fixed FAB not always working in offline lyrics/floating window
- added save playing queue as playlist
- fixed delete podcast playlist popup
- preferences reorder
- changed library categories landscape behavior
- added option to enable or disable adaptive colors
- added immersive mode
- added search podcast

BUG FIXES
- fixed notch
- create playlist not adding tracks on creation
- buggy swipe and drag in playing queue
- removed corner radius to big image theme
- albums not showing in detail
- playing queue not handling correctly duplicated songs


2.0.2
- added mini player player theme
- added support to do not download album image that has same app as folder (finish to implement)
- removed preset chooser popup


2.0.1
- tap tutorial draw out of screen border
- fixed rounded search theme colors
- added show/hide podcast preference
- added buy premium to main popup
- fixed swipe animation
- set jaudiotagger encoding to UTF-8


2.0.0
- Changed app name to Canaree (like Canary)
- Overall redesign
- Clean theme redesign
- Edit item redesign
- Floating window redesign
- Offline lyrics redesign
- Fix crash when cleaning app data
- Changed swipe animation
- Fixed adaptive color
- Fixed skip to next behavior when last song
- Improved search: added folders, genres and playlists
- Enhanced audio focus, now resumes music after playing a short video
- Added play from file manager
- Added 'save default folder' to folder hierarchy view
- Fixed missing albums
- Improved podcast support
- Added RECENTLY PLAYED and NEW albums and artists
- Fixed left space visual bug in settings
- Added filter songs in detail view
- Added change playback speed
- Fixed sorting when unknown album/artist
- Fixed swipe to delete crash in playing queue