@@ -11,6 +11,7 @@
 - added option to enable or disable adaptive colors
 - added immersive mode
 - added search podcast
+- added FAB to show keyboard
 
 BUG FIXES
 - fixed notch
